Added scale option. Added TypeScript definition file. Moved Chart.js to a dependency instead of a peer dependency.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phantom-chartjs",
-  "version": "0.1.4",
+  "version": "0.2.2",
   "description": "Server-side chart generation using PhantomJS and Chart.js",
   "main": "index.js",
   "scripts": {
@@ -16,16 +16,14 @@
   },
   "license": "MIT",
   "dependencies": {
-    "phantomjs-prebuilt": "^2.1.13",
-    "restify-clients": "^1.4.1"
-  },
-  "peerDependencies": {
-    "chart.js": "^2.3.0"
+    "async": "2.1.2",
+    "chart.js": "2.3.0",
+    "phantomjs-prebuilt": "2.1.13",
+    "restify-clients": "1.4.1"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "chart.js": "^2.3.0",
-    "image-size": "^0.5.0",
-    "mocha": "^3.1.2"
+    "chai": "3.5.0",
+    "image-size": "0.5.0",
+    "mocha": "3.1.2"
   }
 }
