--- a/examples/package.json
+++ b/examples/package.json
@@ -5,9 +5,8 @@
   "description": "Examples for phantom-chartjs",
   "license": "MIT",
   "dependencies": {
-    "async": "^2.1.2",
-    "chart.js": "^2.3.0",
+    "async": "2.1.2",
     "mkdir-p": "0.0.7",
-    "phantom-chartjs": "^0.1.0"
+    "phantom-chartjs": "0.2.2"
   }
 }
