--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phantom-chartjs",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "description": "Server-side chart generation using PhantomJS and Chart.js",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,7 @@
   "dependencies": {
     "async": "2.1.2",
     "chart.js": "2.3.0",
+    "chart.piecelabel.js": "^0.9.0",
     "phantomjs-prebuilt": "2.1.13",
     "restify-clients": "1.4.1"
   },
