Changed package.json with new module name.

--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "phantom-chartjs",
-  "version": "0.3.0",
-  "description": "Server-side chart generation using PhantomJS and Chart.js",
+  "name": "phantom-chartjs-extended",
+  "version": "0.1.0",
+  "description": "Server-side chart generation using PhantomJS and Chart.js with integrated Chart.piecelabel.js plugin",
   "main": "index.js",
   "scripts": {
     "test": "mocha index.tests.js"
   },
   "author": {
-    "name": "Artifact Health, Inc",
-    "url": "http://www.artifacthealth.com"
+    "name": "Jordi Hereu",
+    "url": "http://www.jordiher.eu"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/artifacthealth/phantom-chartjs"
+    "url": "https://github.com/jhereu/phantom-chartjs-extended"
   },
   "license": "MIT",
   "dependencies": {
