--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "phantom-chartjs",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "Server-side chart generation using PhantomJS and Chart.js",
   "scripts": {
     "test": "mocha index.tests.js",
     "start": "node server.js"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "author": {
     "name": "Artifact Health, Inc",
@@ -18,7 +21,7 @@
   "dependencies": {
     "async": "2.1.2",
     "chart.js": "2.9.4",
-    "phantomjs-prebuilt": "2.1.15",
+    "phantomjs-prebuilt": "2.1.16",
     "restify-clients": "2.6.6"
   },
   "devDependencies": {
